@@ -682,7 +682,7 @@ set {
 	stats-server 		"stats.roxnet.org";
 	help-channel 		"#ROXnet";
 	hiddenhost-prefix	"rox";
-	prefix-quit 		"no";
+	/* prefix-quit 		"no"; */
 	cloak-keys {
 		9666;
 		3333;
@@ -741,7 +741,7 @@ set {
 	 */
 	oper-only-stats "okGsMRUEelLCX";
 
-	/* Throttling: this example sets a limit of 3 connections per 60s. */
+	/* Throttling: this example sets a limit of 3 connections per 60s (per host). */
 	throttle {
 		connections 3;
 		period 60s;
