@@ -287,6 +287,7 @@ void	init_CommandHash(void)
 	add_Command(MSG_NEWJOIN, TOK_JOIN, m_join, MAXPARA);
 	add_Command(MSG_MODULE, TOK_MODULE, m_module, MAXPARA);	
 	add_Command(MSG_TKL, TOK_TKL, m_tkl, MAXPARA);
+	add_CommandX(MSG_EOS, TOK_EOS, m_eos, MAXPARA, M_SERVER);
 		
 #ifdef DEVELOP_DEBUG
 	for (i = 0; i <= 255; i++)
